--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <!-- 工作经历 -->
         <section id="experience" class="card">
             <h2 class="card-title">工作经历</h2>
-            <h3 class="card-subtitle">上海克比模塑科技有限公司 - 模具工程师</h3>
+            <h3 class="card-subtitle">上海克来机电自动化工程有限公司 - 测控工程师</h3>
             <p class="card-text">
                 <strong>时间：</strong>2025 – 至今<br>
                 <strong>地点：</strong>上海
@@ -230,9 +230,9 @@
         <!-- 项目经验 -->
         <section id="projects" class="card">
             <h2 class="card-title">项目经验</h2>
-            <h3 class="card-subtitle">电子产品外壳模具飞边缺陷质量攻关项目</h3>
+            <h3 class="card-subtitle"></h3>
             <p class="card-text">
-                <strong>角色：</strong>核心攻关成员<br>
+                <strong>角色：</strong>测控工程师<br>
                 <strong>时间：</strong>2025 | 上海
             </p>
             <!-- 项目内容已删除 -->
@@ -278,4 +278,5 @@
         </section>
     </main>
 </body>
+
 </html>
